k8s-branch/front/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdrace-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: pdclient
     http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: pdclient-svc
              port:
                number: 3002


# spec:
#   rules:
#   - host: localhost
#     http:
#       paths:
#       - pathType: Prefix
#         path: /
#         backend:
#           service:
#             name: pdclient-svc
#             port:
#               number: 3002
